<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="pl.edu.pw.elka.llepak.tinbox.MainActivity" android:orientation="vertical">

    <EditText
            android:id="@+id/message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/message_hint" />

    <Button
            android:id="@+id/message_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message_button"/>

    <Button
            android:text="@string/connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_connect"/>

    <Button
            android:text="@string/disconnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_disconnect"/>

    <TextView
            android:text="@string/socket_disconnected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/socket_status"
            />

</LinearLayout>
