<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <Button
            android:text="@string/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/logout_button"/>

    <Button
            android:text="@string/show_files"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/file_list_button"/>

    <Button
            android:text="@string/upload_file"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/upload_file_button"/>

    <Button
            android:text="@string/change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/menu_change_password"/>

    <ProgressBar
            android:id="@+id/main_menu_progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            />

</LinearLayout>